--- a/pom.xml
+++ b/pom.xml
@@ -141,9 +141,9 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.interactivebrokers</groupId>
-            <artifactId>tws-api</artifactId>
-            <version>9.73.01-SNAPSHOT</version>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-core</artifactId>
+            <version>0.14</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
